# problem-instantiation-tool

./: .gitignore  ARCHITECTURE.md  README.md  case-interview-prompt.md  func_inverse.html  main.py  pyproject.toml  spec.md
.claude/: settings.json
.githooks/: pre-commit
content/: sheet.py
content/examples/: analytic_geometry_triangle.py  arithmetic_sequence.py  exam.py  exponent_laws.py  factorise_skills.py  finance.py  func_eval.py  func_inverse.py  linear_balance.py  linear_collect.py  linear_divide.py  linear_equation.py  linear_equations.py  linear_multiply.py  linear_shift.py  linear_shift_divide.py  linear_shift_multiply.py  linear_shift_xdenom.py  linear_xdenom.py  monic_factorise.py  parallelogram_angles.py  probability_venn.py  quadratic_roots.py  quadratics_session.md  quadratics_tutorial.py  rform_skills.py  statistics_grouped.py  statistics_one_var.py  triangle_angles.py  trig.py  trig_graph_properties.py  vocabulary_card.py  zero_product_rule.py
content/generators/: __init__.py  base.py  func_eval.py  func_inverse.py  linear_balance.py  linear_collect.py  linear_divide.py  linear_multiply.py  linear_shift.py  linear_shift_divide.py  linear_shift_multiply.py  linear_shift_xdenom.py  (+1 more)
problem_instantiation_tool/: engine.py  exceptions.py  registry.py  schemas.py  verifier.py
render/: DESIGN.md  __init__.py  acquisition_parallel_line_angles.py  acquisition_triangle_angle_sum.py  geometry.py  geometry_demo.py  graph.py
tests/: conftest.py  test_failure_modes.py  test_instantiate.py  test_rate.py  test_schemas.py
worksheets/: generate.py
(+3 files in other folders)
